refactor: 统一答案 JSON 解析逻辑到工具类
- AnswerMapJSONUntil 新增 parseDataAsObject 和 parseTopicData 方法
- 支持根据 type 字段判断解析方式（TOPIC/DATA_COLLECTION 等）
- Service 层统一使用工具类，删除重复的私有解析方法
- 调整逻辑：始终返回正确答案和是否正确（移除时间判断）

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>